--- a/app/src/main/res/layout/item_weather1.xml
+++ b/app/src/main/res/layout/item_weather1.xml
@@ -6,7 +6,7 @@
     <data>
         <variable
             name="data"
-            type="cn.wthee.withoutyou.data.Data"/>
+            type="com.weather.data.Data"/>
         <variable
             name="isGone"
             type="int"/>
