--- a/app/src/main/res/layout/item_weather2.xml
+++ b/app/src/main/res/layout/item_weather2.xml
@@ -1,119 +1,139 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
+
         <variable
             name="data"
-            type="cn.wthee.withoutyou.data.Data"/>
+            type="com.weather.data.Data" />
+
         <variable
             name="isGone"
-            type="int"/>
+            type="int" />
     </data>
 
-    <LinearLayout
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="100dp"
-        android:layout_marginTop="@dimen/margin_small"
-        android:orientation="horizontal">
+        app:cardCornerRadius="0dp"
+        app:cardElevation="0.3dp"
+        android:layout_marginTop="3dp">
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="horizontal">
 
             <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@{data.d}"
-                    android:textColor="@color/colorAccent"
-                    android:textSize="32sp"
-                    tools:text="04"/>
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:gravity="right"
-                    android:layout_marginRight="@dimen/margin_small"
-                    android:text="@{data.m}"
-                    android:textColor="@color/colorItemText"
-                    android:textSize="@dimen/item_smalltext_size"
-                    tools:text="04"/>
-
-            </LinearLayout>
-
-            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:gravity="center"
-                android:orientation="vertical">
+                android:background="@color/line"
+                android:orientation="horizontal">
 
-                <TextView
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:gravity="center"
-                    android:visibility="@{isGone}"
-                    android:text="@{data.date_nl}"
-                    android:textColor="@color/colorItemText"
-                    android:textSize="@dimen/item_smalltext_size"
-                    tools:text="初一"/>
-                <TextView
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@{data.d}"
+                        android:textColor="@color/colorAccent"
+                        android:textSize="32sp"
+                        tools:text="04" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:paddingLeft="@dimen/margin_small"
+                        android:gravity="right"
+                        android:text="@{data.m}"
+                        android:textColor="@color/colorItemText"
+                        android:textSize="@dimen/title_text_size"
+                        tools:text="04" />
+
+                </LinearLayout>
+
+                <LinearLayout
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
+                    android:padding="@dimen/margin_small"
                     android:gravity="center"
-                    android:text="@{data.week}"
-                    android:textColor="@color/colorAccent"
-                    android:textSize="@dimen/item_text_size"
-                    tools:text="星期一"/>
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:text="@{data.date_nl}"
+                        android:textColor="@color/colorItemText"
+                        android:textSize="@dimen/item_smalltext_size"
+                        android:visibility="@{isGone}"
+                        tools:text="初一" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:text="@{data.week}"
+                        android:textColor="@color/colorAccent"
+                        android:textSize="@dimen/item_text_size"
+                        tools:text="星期一" />
+                </LinearLayout>
+
             </LinearLayout>
 
-        </LinearLayout>
-
-        <androidx.cardview.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            <View
+                android:layout_width="1dp"
+                android:layout_height="wrap_content"
+                android:background="@color/colorAccent" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="@dimen/margin_small"
+                android:background="@color/colorPrimary"
                 android:gravity="center_vertical"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:paddingLeft="@dimen/padding_small">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/lineHeight"
                     android:layout_marginRight="@dimen/margin_small"
                     android:text="@{data.tem}"
                     android:textColor="@color/colorItemText"
                     android:textSize="@dimen/item_text_size"
-                    tools:text="10-15C"/>
+                    tools:text="10-15C" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/lineHeight"
                     android:text="@{data.wea}"
                     android:textColor="@color/colorItemText"
                     android:textSize="@dimen/item_text_size"
-                    tools:text="小雨"/>
+                    tools:text="小雨" />
 
                 <TextView
                     android:id="@+id/tips"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/lineHeight"
                     android:text="@{data.tip}"
-                    android:textSize="@dimen/item_text_size"
                     android:textColor="@color/colorItemText"
-                    tools:text="顶顶顶顶顶顶"/>
+                    android:textSize="@dimen/item_text_size"
+                    tools:text="顶顶顶顶顶顶" />
             </LinearLayout>
-        </androidx.cardview.widget.CardView>
 
-    </LinearLayout>
+        </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
+
+
 
 </layout>
