--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,7 +4,14 @@
     <dimen name="item_smalltext_size">12sp</dimen>
     <dimen name="setting_title_size">18sp</dimen>
     <dimen name="title_text_size">24sp</dimen>
+    <dimen name="widget_text_size">24sp</dimen>
     <dimen name="margin_small">10dp</dimen>
     <dimen name="padding_small">18dp</dimen>
     <dimen name="lineHeight">3dp</dimen>
+
+    <!--
+Refer to App Widget Documentation for margin information
+http://developer.android.com/guide/topics/appwidgets/index.html#CreatingLayout
+    -->
+    <dimen name="widget_margin">8dp</dimen>
 </resources>
