--- a/app/src/main/res/layout/item_weather1.xml
+++ b/app/src/main/res/layout/item_weather1.xml
@@ -4,171 +4,99 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="data"
-            type="com.weather.data.Data"/>
+            type="com.weather.data.Data" />
+
+        <variable
+            name="onClick"
+            type="android.view.View.OnClickListener"/>
+
         <variable
             name="isGone"
-            type="int"/>
+            type="int" />
 
     </data>
 
-    <FrameLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:onClick="@{onClick}"
+        android:orientation="vertical">
 
         <LinearLayout
-            android:id="@+id/layout1"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            tools:visibility="gone"
-            android:gravity="center">
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginRight="@dimen/margin_small"
-                    android:text="@{data.date}"
-                    android:textColor="@color/colorItemText"
-                    android:textSize="@dimen/item_text_size"
-                    tools:text="2019-04-04"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginRight="@dimen/margin_small"
-                    android:visibility="@{isGone}"
-                    android:text="@{data.date_nl}"
-                    android:textColor="@color/colorItemText"
-                    android:textSize="@dimen/item_text_size"
-                    tools:text="初一"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@{data.week}"
-                    android:textColor="@color/colorItemText"
-                    android:textSize="@dimen/item_text_size"
-                    tools:text="星期一"/>
-
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginRight="@dimen/margin_small"
-                    android:text="@{data.tem}"
-                    android:textColor="@color/colorItemText"
-                    android:textSize="@dimen/item_text_size"
-                    tools:text="10-15C"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@{data.wea}"
-                    android:textColor="@color/colorItemText"
-                    android:textSize="@dimen/item_text_size"
-                    tools:text="小雨"/>
-            </LinearLayout>
+            android:orientation="horizontal">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@{data.tip}"
-                android:textSize="@dimen/item_text_size"
+                android:layout_marginRight="@dimen/margin_small"
+                android:text="@{data.date}"
                 android:textColor="@color/colorItemText"
-                tools:text="顶顶顶顶顶顶"/>
+                android:textSize="@dimen/item_text_size"
+                tools:text="2019-04-04" />
+
             <TextView
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text=" "
-                android:textSize="@dimen/item_text_size"/>
+                android:layout_marginRight="@dimen/margin_small"
+                android:text="@{data.date_nl}"
+                android:textColor="@color/colorItemText"
+                android:textSize="@dimen/item_text_size"
+                android:visibility="@{isGone}"
+                tools:text="初一" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@{data.week}"
+                android:textColor="@color/colorItemText"
+                android:textSize="@dimen/item_text_size"
+                tools:text="星期一" />
 
         </LinearLayout>
 
         <LinearLayout
-            android:id="@+id/layout2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="@dimen/margin_small"
+                android:text="@{data.tems}"
+                android:textColor="@color/colorItemText"
+                android:textSize="@dimen/item_text_size"
+                tools:text="10-15C" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@{data.wea}"
+                android:textColor="@color/colorItemText"
+                android:textSize="@dimen/item_text_size"
+                tools:text="小雨" />
+        </LinearLayout>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@{data.tip}"
+            android:textColor="@color/colorItemText"
+            android:textSize="@dimen/item_text_size"
+            tools:text="顶顶顶顶顶顶" />
+
+        <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:gravity="center">
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
+            android:text=" "
+            android:textSize="@dimen/item_text_size" />
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginRight="@dimen/margin_small"
-                    android:text="@{data.date}"
-                    android:textColor="@color/colorItemText"
-                    android:textSize="@dimen/item_text_size"
-                    tools:text="2019-04-04"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginRight="@dimen/margin_small"
-                    android:visibility="@{isGone}"
-                    android:text="@{data.date_nl}"
-                    android:textColor="@color/colorItemText"
-                    android:textSize="@dimen/item_text_size"
-                    tools:text="初一"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@{data.week}"
-                    android:textColor="@color/colorItemText"
-                    android:textSize="@dimen/item_text_size"
-                    tools:text="星期一"/>
-
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginRight="@dimen/margin_small"
-                    android:text="@{data.tem}"
-                    android:textColor="@color/colorItemText"
-                    android:textSize="@dimen/item_text_size"
-                    tools:text="10-15C"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@{data.wea}"
-                    android:textColor="@color/colorItemText"
-                    android:textSize="@dimen/item_text_size"
-                    tools:text="小雨"/>
-            </LinearLayout>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@{data.tip}"
-                android:textSize="@dimen/item_text_size"
-                android:textColor="@color/colorItemText"
-                tools:text="顶顶顶顶顶顶"/>
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text=" "
-                android:textSize="@dimen/item_text_size"/>
-
-        </LinearLayout>
-    </FrameLayout>
-
-
-
-
+    </LinearLayout>
 
 </layout>
