--- a/app/src/main/res/layout/item_weather2.xml
+++ b/app/src/main/res/layout/item_weather2.xml
@@ -8,6 +8,9 @@
         <variable
             name="data"
             type="com.weather.data.Data" />
+        <variable
+            name="onClick"
+            type="android.view.View.OnClickListener"/>
 
         <variable
             name="isGone"
@@ -19,7 +22,8 @@
         android:layout_height="100dp"
         app:cardCornerRadius="0dp"
         app:cardElevation="0.3dp"
-        android:layout_marginTop="3dp">
+        android:layout_marginTop="3dp"
+        android:onClick="@{onClick}">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -105,7 +109,7 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="@dimen/lineHeight"
                     android:layout_marginRight="@dimen/margin_small"
-                    android:text="@{data.tem}"
+                    android:text="@{data.tems}"
                     android:textColor="@color/colorItemText"
                     android:textSize="@dimen/item_text_size"
                     tools:text="10-15C" />
