--- a/app/src/main/res/xml/widget2_info.xml
+++ b/app/src/main/res/xml/widget2_info.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
-    android:initialKeyguardLayout="@layout/widget"
-    android:initialLayout="@layout/widget"
-    android:minWidth="250dp"
-    android:minHeight="40dp"
-    android:previewImage="@drawable/type0"
+    android:initialKeyguardLayout="@layout/widget2"
+    android:initialLayout="@layout/widget2"
+    android:minWidth="110dp"
+    android:minHeight="110dp"
+    android:previewImage="@drawable/type1"
     android:resizeMode="horizontal|vertical"
     android:updatePeriodMillis="86400000"
     android:widgetCategory="home_screen"></appwidget-provider>
