--- a/app/src/main/res/layout/weather_fragment.xml
+++ b/app/src/main/res/layout/weather_fragment.xml
@@ -26,14 +26,45 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/setting"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/margin_small"
-                android:clickable="true"
-                android:textColor="@drawable/title_text_click"
-                android:textSize="@dimen/title_text_size" />
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/setting"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/margin_small"
+                    android:clickable="true"
+                    android:textColor="@drawable/title_text_click"
+                    android:textSize="@dimen/title_text_size"
+                    tools:text="杭州"/>
+
+                <TextView
+                    android:id="@+id/now_update"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:visibility="gone"
+                    tools:text="09:00"/>
+
+                <TextView
+                    android:id="@+id/now_wea"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/margin_small"
+                    tools:text="小雨"/>
+
+                <TextView
+                    android:id="@+id/now_tem"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/margin_small"
+                    tools:text="15℃"/>
+
+            </LinearLayout>
+
+
 
             <LinearLayout
                 android:id="@+id/settingView"
@@ -284,6 +315,17 @@
 
             </com.google.android.material.textfield.TextInputLayout>
 
+            <TextView
+                    android:id="@+id/noWea"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:visibility="gone"
+                    android:text="最近7天，无雨"
+                    android:layout_marginTop="@dimen/item_text_size"
+                    tools:visibility="visible"
+                    android:textColor="@color/colorAccent"/>
+
             <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                 android:id="@+id/swipe"
                 android:layout_width="match_parent"
@@ -300,6 +342,8 @@
                     tools:listitem="@layout/item_weather2" />
 
             </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
+
 
         </LinearLayout>
 
