--- a/app/src/main/res/layout/widget2.xml
+++ b/app/src/main/res/layout/widget2.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="#00000000"
-    android:gravity="center"
+    android:gravity="top|center_horizontal"
     android:orientation="horizontal">
 
     <LinearLayout
@@ -47,7 +47,7 @@
         android:ems="1"
         android:gravity="center"
         android:text="┃┃┃┃┃┃┃┃┃"
-        android:lineSpacingMultiplier="0.65"
+        android:lineSpacingMultiplier="0.7"
         android:layout_centerInParent="true"/>
 
     <RelativeLayout
@@ -104,8 +104,29 @@
 
         </LinearLayout>
 
-
-
     </RelativeLayout>
+
+    <TextView
+        android:id="@+id/appwidget2_tip"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/rightView"
+        android:ems="1"
+        android:textColor="@color/colorPrimary"
+        android:textSize="@dimen/item_smalltext_size"
+        tools:text="下雨天"
+        tools:textColor="@color/colorItemText" />
+
+    <TextView
+        android:id="@+id/appwidget2_tip2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/lineHeight"
+        android:layout_below="@id/rightView"
+        android:ems="1"
+        android:textColor="@color/colorPrimary"
+        android:textSize="@dimen/item_smalltext_size"
+        tools:text="记得带伞"
+        tools:textColor="@color/colorItemText" />
 
 </LinearLayout>
