--- a/app/src/main/res/layout/widget.xml
+++ b/app/src/main/res/layout/widget.xml
@@ -1,15 +1,16 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/appwidget"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:gravity="center"
     android:background="#00000000">
 
     <LinearLayout
+        android:id="@+id/leftView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_toLeftOf="@id/center"
+        android:layout_centerInParent="true"
         android:gravity="right"
         android:orientation="vertical">
 
@@ -17,7 +18,6 @@
             android:id="@+id/appwidget_now_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="@dimen/margin_small"
             android:textColor="@color/colorPrimary"
             android:textSize="@dimen/widget_text_size"
             android:format12Hour="HH:mm:ss"
@@ -30,7 +30,6 @@
             android:layout_below="@id/appwidget_now_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="@dimen/margin_small"
             android:textColor="@color/colorPrimary"
             android:textSize="@dimen/item_smalltext_size"
             android:format12Hour="yyyy年MM月dd日"
@@ -44,24 +43,27 @@
     <TextView
         android:id="@+id/center"
         android:layout_width="10dp"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/margin_small"
+        android:layout_marginRight="@dimen/margin_small"
         android:ems="1"
         android:gravity="center"
         android:text="┃┃┃"
-        android:lineSpacingMultiplier="0.7"
+        android:lineSpacingMultiplier="0.755"
         android:layout_centerInParent="true"/>
 
 
     <RelativeLayout
+        android:id="@+id/rightView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_toRightOf="@id/center"
         android:orientation="vertical">
 
         <LinearLayout
-            android:id="@+id/rightView"
+            android:id="@+id/rightCity"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/margin_small"
             android:orientation="horizontal">
 
             <TextView
@@ -92,7 +94,6 @@
                     android:id="@+id/appwidget_date"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginRight="@dimen/margin_small"
                     android:textColor="@color/colorPrimary"
                     android:textSize="@dimen/item_smalltext_size"
                     tools:text="04/04"
@@ -107,8 +108,7 @@
             android:id="@+id/appwidget_tip"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/margin_small"
-            android:layout_below="@id/rightView"
+            android:layout_below="@id/rightCity"
             android:textColor="@color/colorPrimary"
             android:textSize="@dimen/item_smalltext_size"
             tools:text="下雨天，记得带伞"
@@ -116,6 +116,4 @@
 
     </RelativeLayout>
 
-
-
-</LinearLayout>
+</RelativeLayout>
