--- a/app/src/main/res/layout/widget2.xml
+++ b/app/src/main/res/layout/widget2.xml
@@ -47,16 +47,17 @@
         android:ems="1"
         android:gravity="center"
         android:text="┃┃┃┃┃┃┃┃┃"
-        android:lineSpacingMultiplier="0.7"
+        android:lineSpacingMultiplier="0.755"
         android:layout_centerInParent="true"/>
 
     <RelativeLayout
+        android:id="@+id/rightView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/margin_small">
 
         <LinearLayout
-            android:id="@+id/rightView"
+            android:id="@+id/rightCity"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center|top"
@@ -77,7 +78,7 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toRightOf="@id/rightView"
+            android:layout_toRightOf="@id/rightCity"
             android:layout_marginLeft="@dimen/lineHeight"
             android:orientation="vertical">
 
